--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "author": "Adrian Kryzinski <adriankryzinski@gmail.com>",
   "license": "MIT",
   "scripts": {
-      "start": "nodemon server"
+    "start": "nodemon server"
   },
   "dependencies": {
     "express": "4.17.1",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "socket.io": "2.2.0"
   }
 }
